--- a/Css/main.css
+++ b/Css/main.css
@@ -91,10 +91,13 @@ h3 {
 .js-title-contact {
     display: flex;
     justify-content: center;
+    align-items: center;
+    text-align: center;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
     color: #C4C4C4;
+    padding: 15px;
 }
 
 .js-home {
