--- a/Css/main.css
+++ b/Css/main.css
@@ -90,14 +90,11 @@ h3 {
 
 .js-title-contact {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+    text-align: justify;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
     color: #C4C4C4;
-    padding: 15px;
 }
 
 .js-home {
@@ -308,16 +305,17 @@ h3 {
 .js-container-r2 {
     position: absolute;
     width: 839px;
-    height: 450px;
+    height: 500px;
     left: 469px;
     top: 2086px;
     background: #3B8DD9;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px 50px 0px 0px;
+
 }
 
 .js-container-r3 {
-    position: absolute;
+    position: relative;
     width: 847px;
     height: 450px;
     left: 419px;
